# Financial_report_analysis

./: README.md  final_output.csv  prosess_reports.py  pyproject.toml  report_scraping.py  run.py  run_pipeline.py
app/: ai_analysis.py  report_scraping.py  search_test.py
app/Services/: llm_factory.py  synthesizer.py  utils.py
app/config/: settings.py
app/database/: vector_store.py
app/processing/: get_company_data.py  process_reports.py  report_scraping.py  update_company_data.py  update_sector_metrics.py
data/processed/company/: company_data.csv
data/processed/metadata/: BMK_reports_data.json
data/processed/other_announcements/: NKR_text_announcements.json
data/processed/sector/: sector_metrics.txt
