[project]
name = "Financial_report_analysis"
version = "1"
description = "AI analysis of financial reports"
authors = [
    {name = "Mattias Haughom", email = "mattias.haughom@gmail.com"},
]
dependencies = ["requests>=2.32.3", "beautifulsoup4>=4.12.3", "pip>=24.3.1", "PyPDF2>=3.0.1", "pdfplumber>=0.11.4", "pydantic-ai>=0.0.12", "pandas>=2.2.3", "dotenv>=0.0.5", "timescale-vector>=0.0.7", "cohere>=5.13.3", "psycopg>=3.2.3", "nltk>=3.9.1", "langchain>=0.3.10", "langchain-community>=0.3.10", "instructor>=1.7.0", "pypdf>=5.1.0", "selenium>=4.27.1", "openpyxl>=3.1.5", "yagmail>=0.15.293", "google-api-python-client>=2.155.0", "google-auth-httplib2>=0.2.0", "google-auth-oauthlib>=1.2.1", "sendgrid>=6.11.0", "schedule>=1.2.2"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.scripts]
m = "python -m app.processing.report_scraping"
pr = "python -m app.processing.process_reports"
mkm = "python -m main"
